Jobs Generator Snipped Now Also Creates `java_jobs.bat`
The jobs generator snipped now also creates the `java_jobs.bat` batch
file.